--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 .navbar{
     background-color: #fd6569;
     padding: 10px;
+    font-family: "Montserrat", sans-serif;
 }
 
 .container{
@@ -41,7 +42,7 @@ vertical-align: top;
     padding-left: 10px;
     padding-right: 10px;
     border: none;
-    margin-top: 10px;
+    margin-top: 15px;
 
 }
 
@@ -92,6 +93,7 @@ vertical-align: top;
     padding: 5px;
     font-size: 20px;
     border-bottom: solid black;
+    margin-top: 10px;
 }
 
 
@@ -99,9 +101,11 @@ vertical-align: top;
     background-color: transparent;
     border: solid black;
     width: 100%;
+    height: 150px;
     margin: 5px;
     padding: 5px;
     font-size: 20px;
+    margin-left: 5px;
 }
 
 
@@ -123,10 +127,22 @@ vertical-align: top;
     padding-top: 10px;
     padding-bottom: 10px;
     margin: 5px;
+    border-radius: 10px;
 }
 .popup-box input:focus{
     outline: none;
 }
 .popup-box textarea:focus{
     outline: none;
+}
+
+.book-container h4{
+    padding-top: 10px;
+}
+.book-container p{
+        padding-top: 10px;
+
+}
+.popup-box h2{
+    text-align: center;
 }
