--- a/style.css
+++ b/style.css
@@ -15,8 +15,10 @@ body{
 }
 
 .container{
-
-padding: 10px;
+display: grid;
+grid-template-columns: repeat(auto-fit,minimax(250px,1fr));
+gap: 20px;
+padding: 20px;
 
 }
 .book-container{
@@ -29,6 +31,7 @@ margin: 30px;
 /* correct order il line varan */
 display: inline-block;
 vertical-align: top;
+line-height: 1.6;
 }
 .book-container h2{
     color: #fd6569;
@@ -57,7 +60,7 @@ vertical-align: top;
     font-size: 40px;
     border: none;
     position: fixed;
-    bottom: 3opx;
+    bottom: 30px;
     right: 30px;
 }
 
@@ -79,11 +82,21 @@ vertical-align: top;
     width: 40%;
     padding: 40px;
     border-radius: 10px;
-    position: absolute;
+    position: fixed;
     top: 20%;
     left: 30%;
     z-index: 2;    
     display: none;
+    top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.popup-overlay {
+  position: fixed;
+}
+@keyframes fadeScale {
+  from { opacity: 0; transform: scale(0.8); }
+  to { opacity: 1; transform: scale(1); }
 }
 .popup-box input{
     background-color: transparent;
